--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -15,12 +15,12 @@
           <a routerLink="">Contacto</a>
         </li>
 
-        <li *ngIf="!usuario">
+        <li *ngIf="!username">
           <a routerLink="/login">Login</a>
         </li>
         
-        <li class="menu-container" *ngIf="usuario">
-          <a routerLink="">{{usuario}}</a>
+        <li class="menu-container" *ngIf="username">
+          <a routerLink="">{{username}}</a>
           <div class="menu">
             <a routerLink="/perfil">Perfil</a>
             <a>Cerrar Sesión</a>
