agrego vista admin

--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,3 +1,5 @@
 <!-- información generica de cualquier footer -->
 
-<div>footer--</div>
+<footer class="bg-dark text-light text-center py-5 mt-3">
+    <h5>Esto es un footer</h5>
+</footer>
