Crear usuario llega a backend

--- a/frontend/src/app/components/admin-producto/admin-producto.component.html
+++ b/frontend/src/app/components/admin-producto/admin-producto.component.html
@@ -1,7 +1,7 @@
 
 <h2 class="text-center my-3">Admin Producto</h2>
-<div class="container d-flex justify-content-center">
-    <div class="accordion col-lg-7" id="accordionBasic">
+<div class="container row d-flex justify-content-center m-auto">
+    <div class="accordion col col-lg-8" id="accordionBasic">
         <!--Crear Producto-->
         <div class="accordion-item">
         <h2 class="accordion-header" id="headingOne">
@@ -50,7 +50,7 @@
         </div>
         </div>
 
-        <!--Editar Producto-->
+        <!--Editar Producto
         <div class="accordion-item">
         <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -76,7 +76,7 @@
                     id="nombreProd"
                     placeholder="Ingrese Nombre del Producto"
                     required="required"
-                    formControlName="nuevonombreProd"
+                    formControlName="nombreProd"
                     />
                     <input
                     class="form-control mb-1"
@@ -84,7 +84,7 @@
                     id="descripcionProd"
                     placeholder="Ingrese descripción del Producto"
                     required="required"
-                    formControlName="nuevaDescripcionProd"
+                    formControlName="descripcionProd"
                     />
                     <input
                     class="form-control mb-1"
@@ -92,7 +92,7 @@
                     id="clasificacionProd"
                     placeholder="Ingrese clasificación del Producto"
                     required="required"
-                    formControlName="nuevaClasificacionProd"
+                    formControlName="clasificacionProd"
                     />
                     <input
                     class="form-control mb-1"
@@ -100,15 +100,15 @@
                     id="precioProd"
                     placeholder="Ingrese precio del Producto"
                     required="required"
-                    formControlName="nuevoPrecioProd"
+                    formControlName="precioProd"
                     />
                     <button type="submit" class="btn btn-warning w-100 fs-4">Guardar Cambios</button>
                   </form>
             </div>
         </div>
-        </div>
+        </div>-->
 
-        <!--Eliminar Producto-->
+        <!--Eliminar Producto
         <div class="accordion-item">
         <h2 class="accordion-header te" id="headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -130,7 +130,8 @@
                     </select>
                     <button type="submit" class="btn btn-danger w-100 fs-4">Eliminar</button>
                   </form>
-        </div>
-        </div>
+            </div>
+        </div>-->
+        
     </div>
 </div>
