admin front funcionando

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,6 +1,7 @@
 <header>
   <div class="container">
     <a routerLink="/" class="logo">Pen Tablet App</a>
+    <a routerLink="/adminProducto" class="btn btn-primary text-light">ADMIN</a>
     <nav>
       <ul>
         <li>
