--- a/frontend/src/app/components/admin-producto/admin-producto.component.html
+++ b/frontend/src/app/components/admin-producto/admin-producto.component.html
@@ -50,7 +50,7 @@
         </div>
         </div>
 
-        <!--Editar Producto
+        <!--Editar Producto-->
         <div class="accordion-item">
         <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -59,56 +59,61 @@
         </h2>
         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionBasic">
             <div class="accordion-body">
-                <form (ngSubmit)="editarProducto()" [formGroup]="crearProductoForm" class="custom-form" method="post">
+                <form (ngSubmit)="editarProducto()" [formGroup]="editarProductoForm" class="custom-form" method="post">
                     <select 
                     class="form-select mb-2"
-                    name="nombreProd" 
-                    id="nombreProd">
-                        <option value="" disabled selected> Seleccione Un Producto a Editar</option>
-                        <option value="">prodEjemplo1</option>
-                        <option value="">prodEjemplo2</option>
-                        <option value="">prodEjemplo3</option>
+                    name="idProdAEditar" 
+                    id="idProdAEditar"
+                    formControlName="idProdAEditar"
+                    required>
+                        <option value="0" disabled selected> Seleccione Un Producto a Editar</option>
+                        <option 
+                        *ngFor="let item of todosLosProductos" 
+                        ngValue={{item.id}}>
+                            {{item.id}} - {{item.nombre}}
+                        </option>
                     </select>
 
                     <input
                     class="form-control mb-1"
+                    id="nuevoNombre"
+                    name="nuevoNombre"
                     type="text"
-                    id="nombreProd"
+                    formControlName="nuevoNombre"
                     placeholder="Ingrese Nombre del Producto"
                     required="required"
-                    formControlName="nombreProd"
                     />
                     <input
                     class="form-control mb-1"
                     type="text"
-                    id="descripcionProd"
+                    id="nuevaDescripcion"
                     placeholder="Ingrese descripción del Producto"
                     required="required"
-                    formControlName="descripcionProd"
+                    formControlName="nuevaDescripcion"
                     />
                     <input
                     class="form-control mb-1"
                     type="text"
-                    id="clasificacionProd"
+                    id="nuevaClasificacion"
                     placeholder="Ingrese clasificación del Producto"
                     required="required"
-                    formControlName="clasificacionProd"
+                    formControlName="nuevaClasificacion"
                     />
                     <input
                     class="form-control mb-1"
                     type="number"
-                    id="precioProd"
+                    id="nuevoPrecio"
                     placeholder="Ingrese precio del Producto"
                     required="required"
-                    formControlName="precioProd"
+                    formControlName="nuevoPrecio"
                     />
                     <button type="submit" class="btn btn-warning w-100 fs-4">Guardar Cambios</button>
                   </form>
             </div>
         </div>
-        </div>-->
+        </div>
 
-        <!--Eliminar Producto
+        <!--Eliminar Producto-->
         <div class="accordion-item">
         <h2 class="accordion-header te" id="headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -117,21 +122,25 @@
         </h2>
         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionBasic">
             <div class="accordion-body">
-                <form (ngSubmit)="eliminarProducto()" [formGroup]="crearProductoForm" class="custom-form" method="post">
+                <form (ngSubmit)="eliminarProducto()" [formGroup]="eliminarProductoForm" class="custom-form" method="post">
 
                     <select 
                     class="form-select mb-2"
-                    name="nombreProd" 
-                    id="nombreProd">
-                        <option value="" disabled selected> Seleccione Un Producto a Eliminar</option>
-                        <option value="">prodEjemplo1</option>
-                        <option value="">prodEjemplo2</option>
-                        <option value="">prodEjemplo3</option>
+                    name="idProdAEliminar" 
+                    id="idProdAEliminar"
+                    formControlName="idProdAEliminar"
+                    required>
+                        <option value="0" disabled selected> Seleccione Un Producto a Editar</option>
+                        <option 
+                        *ngFor="let item of todosLosProductos" 
+                        ngValue={{item.id}}>
+                            {{item.id}} - {{item.nombre}}
+                        </option>
                     </select>
                     <button type="submit" class="btn btn-danger w-100 fs-4">Eliminar</button>
                   </form>
             </div>
-        </div>-->
+        </div>
         
     </div>
 </div>
