--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,10 +1,10 @@
-<app-header [username]="username"></app-header>
+<app-header [email]="username"></app-header>
 
 <router-outlet></router-outlet> <!-- agrega los componentes correspondientes a la url, según app-routing.module.ts -->
-
+<!--
 <app-footer></app-footer>
 
-<!--
+
 <div *ngIf="username; then thenBlock; else elseBlock"></div>
 <ng-template #thenBlock>
   <p>Bienvenido {{ username }}</p>
