--- a/frontend/src/app/components/recuperar-contasenia/recuperar-contasenia.component.html
+++ b/frontend/src/app/components/recuperar-contasenia/recuperar-contasenia.component.html
@@ -1,17 +1,18 @@
 <div class="login" >
-    <form class="custom-form" method="post">
-      <h1>Log In</h1>
+    <form [formGroup]="recuperarUsuario" (ngSubmit)="recuperar()" class="custom-form" method="post">
+      <h1>Recuperar contraseña</h1>
 
       <input
         type="email"
         id="email"
         placeholder="Ingrese email"
         required="required"
-        formControlName="email"
+        formControlName="correo"
       />
+      <button type="submit">Enviar email</button>
       <div>
-        <p class="mt-3">No Tienes cuenta? <a routerLink="/singUp">Registrar</a></p>
-        <a routerLink="recuperarContrasenia"> recuperar contraseña</a>
+        <p class="mt-3"><a routerLink="/login">Volver</a></p>
       </div>
     </form>
   </div>
+  <app-spinner></app-spinner>
