--- a/frontend/src/app/components/registro/registro.component.html
+++ b/frontend/src/app/components/registro/registro.component.html
@@ -1,4 +1,4 @@
-<div class="login" >
+<div  class="login" >
     <form (ngSubmit)="registrar()" [formGroup]="regitrarUsuario" class="custom-form" method="post">
       <h1>Sing up</h1>
       <input
@@ -15,6 +15,13 @@
     required="required"
     formControlName="apellido"
   />
+  <input
+  type="text"
+  id="dir"
+  placeholder="Ingrese Direccion"
+  required="required"
+  formControlName="direccion"
+/>
     
       <input
         type="email"
@@ -42,4 +49,7 @@
         <p class="mt-3">Tienes cuenta? <a routerLink="/login">Inicie sesion</a></p>
       </div>
     </form>
+    <app-spinner></app-spinner>
+    
   </div>
+  
