--- a/frontend/src/app/shared/spinner/spinner.component.html
+++ b/frontend/src/app/shared/spinner/spinner.component.html
@@ -1,1 +1,8 @@
-<p>spinner works!</p>
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  type="square-loader"
+>
+  <p style="font-size: 20px; color: white">Loading...</p>
+</ngx-spinner>
