--- a/frontend/src/app/components/ver-producto/ver-producto.component.html
+++ b/frontend/src/app/components/ver-producto/ver-producto.component.html
@@ -6,7 +6,7 @@
                     <a routerLink="/">{{producto.clasificacion}}</a> / 
                         <a routerLink="{{'/producto?prodId='+ producto.id}}">{{producto.nombre}}</a> 
             </p>
-            <img class="w-100" src="https://d3ugyf2ht6aenh.cloudfront.net/stores/860/363/products/huion-hs64-pen-tablet-011-96d426e48d4605b89716008966178343-640-0.jpg" alt="imgProducto">
+            <img class="w-100" src="{{producto.imgUrl}}" alt="imgProducto">
         </div>
         <form 
             class=" bloqueInfo col-lg-5 
