--- a/frontend/src/app/components/lista-productos/lista-productos.component.html
+++ b/frontend/src/app/components/lista-productos/lista-productos.component.html
@@ -1,17 +1,38 @@
-<div class="container" style="margin: 1em auto;">
-  <div class="row">
-    <div *ngFor="let product of productos" class="col-3" style="margin-bottom: 1em;">
-      <div class="card">
-        <a routerLink="/producto" [queryParams]="{prodId: product.id }">
-          <img src="{{product.imgUrl}}" class="card-img-top" alt="Imagen de {{product.nombre}}"/>
-        </a>
-        <div class="card-body">
-          <a routerLink="/producto" [queryParams]="{prodId: product.id}">
-            <h5 class="card-title">{{product.nombre}}</h5>
+<div class="container my-4 mx-auto ">
+  <div class="row ">
+    <div *ngFor="let product of productos" 
+          class="col-xl-3 col-lg-4 col-md-6 col-sm-11 mb-4">
+
+      <a  class="card text-decoration-none text-black shadow">
+
+        <img  src="{{product.imgUrl}}" 
+              class="card-img-top px-2" style="cursor:pointer"
+              alt="Imagen de {{product.nombre}}"
+              routerLink="/producto" 
+              [queryParams]="{prodId: product.id }"/>
+
+        <div class="card-body position-relative">
+
+          <h5 class="card-title" style="cursor:pointer"
+              routerLink="/producto" 
+              [queryParams]="{prodId: product.id }">
+            {{product.nombre}}
+          </h5>
+          <h6 class="card-subtitle">${{product.precio}}</h6>
+
+          <a  routerLink="/nose"
+              class="btn btn-primary 
+                    p-2 mt-3 
+                    d-flex justify-content-center">
+
+            <i class="material-icons me-2">
+              add_shopping_cart
+            </i>
+            Añadir al carrito 
           </a>
-          <p class="card-text">$ {{product.precio}}</p>
         </div>
-      </div>
+      </a>
+
     </div>
   </div>
 </div>
