--- a/frontend/src/app/components/verificar-email/verificar-email.component.html
+++ b/frontend/src/app/components/verificar-email/verificar-email.component.html
@@ -1,9 +1,1 @@
-<div class="login" >
-    <div class="custom-form" method="post">
-      <h1>Verifique su Email</h1>
-      <div>
-        <button class="mt-3" routerLink="/login">Volver</button>
-      </div>
-    </div>
-  </div>
-  <app-spinner></app-spinner>
+<p>verificar-email works!</p>
