log in funcionando desde el back con manejo de errores

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -31,7 +31,7 @@
         </li>
         
         <li>
-          <a routerLink="/carrito">
+          <a routerLink="/carrito" *ngIf="isLogged">
             <i class="material-icons">
               shopping_cart
             </i>
