registro y verificacion andando

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -20,6 +20,7 @@
 
         <li *ngIf="!isLogged">
           <a routerLink="/login">Login</a>
+          <a routerLink="/singUp">Registrarse</a>
         </li>
 
         <li  class="menu-container" *ngIf="isLogged">
