--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -10,6 +10,8 @@
         formControlName="email"
      
       />
+      <span *ngIf="loginUsuario.get('email')?.hasError('email') && loginUsuario.get('email')?.touched"  class="text-danger errorLabel" >El email no tiene el formato correcto</span>
+
       <input
         type="password"
         id="password"
@@ -17,11 +19,12 @@
         required="required"
         formControlName="password"
       />
+      <span *ngIf="loginUsuario.get('password')?.hasError('required') && loginUsuario.get('password')?.hasError('minlength') && loginUsuario.get('password')?.touched"  class="text-danger errorLabel" >La contraseña es invalida</span>
 
       <button type="submit">Login</button>
       <div>
         <p class="mt-3">No Tienes cuenta? <a routerLink="/singUp">Registrar</a></p>
-        <a routerLink="/recuperarContrasenia"> recuperar contraseña</a>
+        <p class="mt-3">Te olvidaste la contraseña? <a routerLink="/recuperarContrasenia"> recuperar contraseña</a></p>
       </div>
     </form>
     <app-spinner></app-spinner>
