--- a/frontend/src/app/components/recuperar-contasenia/recuperar-contasenia.component.css
+++ b/frontend/src/app/components/recuperar-contasenia/recuperar-contasenia.component.css
@@ -1,48 +1,60 @@
 * {
-    box-sizing: border-box;
-  }
-  html,
-  body {
-    background: #ecf0f3;
-  }
-  h1 {
-    margin: 0;
-    padding: 0;
-  }
-  .custom-form {
-    text-align: center;
-    min-width: 300px;
-    max-width: 60%;
-    margin: 0px auto;
-    background: rgba(255, 255, 255, 0.15);
-    padding: 2rem 3rem;
-    margin: auto;
-    border-radius: 2.5rem;
-    background-color: #ecf0f3;
-    color: black;
-    margin-top: 10rem;
-  }
-  .custom-form input {
-    display: block;
-    margin: 2rem 0;
-    width: 100%;
-    border-radius: 0.5rem;
-    padding: 1rem;
-    border: none;
-    border: 0 none;
-    background: #ffffff;
-  }
-  .custom-form button {
-    text-transform: uppercase;
-    letter-spacing: 0.15em;
-    border: none;
-    font-size: 0.875rem;
-    color: #ffffff;
-    font-weight: bold;
-    background-color: #2c7bf9;
-    width: 100%;
-    display: block;
-    padding: 0.875rem 1rem;
-    border-radius: 1.5rem;
-    cursor: pointer;
-  }
+  box-sizing: border-box;
+}
+html,
+body {
+  background: #ecf0f3;
+}
+h1 {
+  margin: 0;
+  padding: 0;
+}
+.custom-form {
+  text-align: start;
+  min-width: 300px;
+  max-width: 30%;
+  margin: 0px auto;
+  background: rgba(255, 255, 255, 0.15);
+  padding: 1rem 2rem;
+  margin: auto;
+  border-radius: 2.5rem;
+  background-color: #ecf0f3;
+  color: black;
+  margin-top: 10rem;
+}
+
+.custom-form h1 {
+  text-align: center;
+}  
+
+.custom-form P {
+  text-align: center;
+}
+.custom form .errorLabel{
+  margin-left: 2px;
+}
+
+.custom-form input {
+  display: block;
+  margin: 1.5rem 0;
+  width: 100%;
+  border-radius: 0.5rem;
+  padding: 0.8rem;
+  border: none;
+  border: 0 none;
+  background: #ffffff;
+}
+.custom-form button {
+  text-transform: uppercase;
+  letter-spacing: 0.15em;
+  border: none;
+  font-size: 0.875rem;
+  color: #ffffff;
+  font-weight: bold;
+  background-color: #2c7bf9;
+  width: 100%;
+  display: block;
+  padding: 0.875rem 1rem;
+  border-radius: 1.5rem;
+  cursor: pointer;
+}
