--- a/frontend/src/app/components/recuperar-contasenia/recuperar-contasenia.component.html
+++ b/frontend/src/app/components/recuperar-contasenia/recuperar-contasenia.component.html
@@ -9,6 +9,8 @@
         required="required"
         formControlName="correo"
       />
+      <span *ngIf="recuperarUsuario.get('correo')?.hasError('email') && recuperarUsuario.get('correo')?.touched"  class="text-danger errorLabel" >El email no tiene el formato correcto</span>
+
       <button type="submit">Enviar email</button>
       <div>
         <p class="mt-3"><a routerLink="/login">Volver</a></p>
