--- a/frontend/src/app/components/lista-por-tipo/lista-por-tipo.component.html
+++ b/frontend/src/app/components/lista-por-tipo/lista-por-tipo.component.html
@@ -23,9 +23,8 @@
           </h5>
           <h6 class="card-subtitle">${{product.precio}}</h6>
           
-
-          <!--Onclick?-->
-          <a  routerLink="/nose"
+          
+          <button  (click)="agregarProductoAlCarrito(product.id)"
               class="btn btn-primary 
                     p-2 mt-3 
                     d-flex justify-content-center">
@@ -34,7 +33,7 @@
               add_shopping_cart
             </i>
             Añadir al carrito 
-          </a>
+          </button>
         </div>
       </a>
 
