estilos en detalle de producto

--- a/frontend/src/app/components/ver-producto/ver-producto.component.css
+++ b/frontend/src/app/components/ver-producto/ver-producto.component.css
@@ -1,4 +1,15 @@
 .btnEnviar{
     height: 3em;
-    
 }
+
+.descripcion{
+    font-size: 15px;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
+a:hover {
+    color: grey;
+  }
