--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -36,7 +36,7 @@
             <i class="material-icons">
               shopping_cart
             </i>
-            Carrito <span>3</span>
+            <span>Carrito</span>
           </a>
         </li>
       </ul>
