--- a/frontend/src/app/components/perfil/perfil.component.html
+++ b/frontend/src/app/components/perfil/perfil.component.html
@@ -1,1 +1,34 @@
-<p>perfil works!</p>
+<div class="container" style="margin-top:1em;">
+  <div class="">
+    <h3>PERFIL</h3>
+    <h4>{{usuario.nombre}} {{usuario.apellido}}</h4>
+    <p>{{usuario.email}}</p>
+    <p>{{usuario.direccion}}</p>
+  </div>
+  
+  <div>
+    <h3>Carritos comprados:</h3>
+    
+    <div>
+      <ul>
+        <li *ngFor="let car of carritos" (click)="verCarrito(car.id);">
+          <span>{{car.id}}</span>
+          <span style="margin: 0 1em;">{{car.totalPagado | currency}}</span>
+          <span>{{car.fecha}}</span>
+        </li>
+      </ul>
+
+      <div>
+        <ul>
+          <li *ngFor="let prod of productos">
+            <img src="{{prod.imgUrl}}" alt="prod.nombre" style="max-width:75px;max-height: 75px;">
+            <span>{{prod.nombre}}</span>
+            <span style="margin: 0 1em;">precio pagado por unidad: {{prod.precioPagadoPorUnidad}}</span>
+            <span>cantidad comprada: {{prod.cantidad}}</span>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+  </div>
+</div>
