--- a/frontend/src/app/components/carrito/carrito.component.html
+++ b/frontend/src/app/components/carrito/carrito.component.html
@@ -35,8 +35,8 @@
                     {{producto.precio | currency}} 
                 </td>
                 <td>
-                    <button class="btn btn-primary me-2" >+</button> 
-                    <button class="btn btn-primary me-2" >-</button> 
+                    <button class="btn btn-primary me-2" (click)="sumarProducto(producto)">+</button> 
+                    <button class="btn btn-primary me-2" (click)="restarProducto(producto)">-</button> 
                     <button class="btn btn-primary" (click)='eliminarProducto(producto.id);'>x</button>
                 </td>
             </tr>
