--- a/frontend/src/app/components/lista-por-tipo/lista-por-tipo.component.html
+++ b/frontend/src/app/components/lista-por-tipo/lista-por-tipo.component.html
@@ -1,4 +1,4 @@
-<h1 class="text-center my-3">{{tipoDeProductos}}</h1>
+<h1 class="text-center my-3 fw-light">{{tipoDeProductos}}</h1>
 
 <div class="container" style="margin: 1em auto;">
     <div class="row">
