--- a/frontend/src/app/components/login/login.component.css
+++ b/frontend/src/app/components/login/login.component.css
@@ -1,4 +1,4 @@
-* {
+/** {
   box-sizing: border-box;
 }
 html,
@@ -61,4 +61,9 @@ h1 {
   padding: 0.875rem 1rem;
   border-radius: 1.5rem;
   cursor: pointer;
+}
+*/
+
+.login{
+  height: 75vh;
 }
