--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,16 +1,22 @@
-<div class="login" >
+<div class="login container d-flex justify-content-center align-items-center " >
 
-    <form (ngSubmit)="login()" class="custom-form" method="post" [formGroup]="loginUsuario">
-      <h1>Log In</h1>
-        <input
-        type="email"
-        id="email"
-        placeholder="Ingrese email"
-        required="required"
-        formControlName="email"
-     
+    <form   (ngSubmit)="login()" 
+            method="post" 
+            [formGroup]="loginUsuario"
+            class="card p-5 shadow"> 
+      <h1 class="text-center fw-light mb-4">Log In</h1>
+
+      <input
+      type="email"
+      id="email"
+      placeholder="Ingrese email"
+      required="required"
+      formControlName="email"
+      class="form-control mb-3"
       />
-      <span *ngIf="loginUsuario.get('email')?.hasError('email') && loginUsuario.get('email')?.touched"  class="text-danger errorLabel" >El email no tiene el formato correcto</span>
+
+      <span *ngIf="loginUsuario.get('email')?.hasError('email') && loginUsuario.get('email')?.touched"  
+            class="text-danger errorLabel" >El email no tiene el formato correcto</span>
 
       <input
         type="password"
@@ -18,13 +24,41 @@
         placeholder="Ingrese contraseña"
         required="required"
         formControlName="password"
+        class="form-control mb-4"
       />
-      <span *ngIf="loginUsuario.get('password')?.hasError('required') && loginUsuario.get('password')?.hasError('minlength') && loginUsuario.get('password')?.touched"  class="text-danger errorLabel" >La contraseña es invalida</span>
+      <span   *ngIf="loginUsuario.get('password')?.hasError('required') && loginUsuario.get('password')?.hasError('minlength') && loginUsuario.get('password')?.touched"  
+              class="text-danger errorLabel" >La contraseña es invalida</span>
 
-      <button type="submit">Login</button>
+      <button type="submit" class="btn btn-primary d-flex align-items-center justify-content-center fs-4">
+        <span class="material-icons me-2">
+          login
+        </span>
+        Login
+      </button>
+
+      <hr>
+
       <div>
-        <p class="mt-3">No Tienes cuenta? <a routerLink="/singUp">Registrar</a></p>
-        <p class="mt-3">Te olvidaste la contraseña? <a routerLink="/recuperarContrasenia"> recuperar contraseña</a></p>
+        <p class="mt-3 d-flex align-items-center ">
+          No Tienes cuenta? 
+          <a  routerLink="/singUp" 
+              class="btn btn-outline-primary ms-3 d-flex align-items-center justify-content-center">
+            <span class="material-icons me-2">
+              person_add
+            </span>
+            Registrarse
+          </a>
+        </p>
+        <p class="mt-3 d-flex align-items-center ">
+          Te olvidaste la contraseña? 
+          <a  routerLink="/recuperarContrasenia"
+              class="btn btn-outline-primary ms-3 d-flex align-items-center justify-content-center"> 
+            <span class="material-icons me-2">
+              lock_reset
+            </span>
+            recuperar contraseña
+          </a>
+        </p>
       </div>
     </form>
     <app-spinner></app-spinner>
