--- a/frontend/src/app/components/perfil/perfil.component.html
+++ b/frontend/src/app/components/perfil/perfil.component.html
@@ -1,26 +1,34 @@
-<div class="container" style="margin-top:1em;">
-  <div class="">
-    <h3>PERFIL</h3>
+<div class="d-flex justify-content-around flex-wrap
+            container" style="margin-top:1em;">
+  <div class="col-lg-3 col-12 
+              d-flex justify-content-center flex-wrap 
+              container row 
+              text-center bg-light rounded shadow">
+    <span class="material-icons text-center" style="font-size: 15em">
+      account_circle
+    </span>
     <h4>{{usuario.nombre}} {{usuario.apellido}}</h4>
-    <p>{{usuario.email}}</p>
+    <p>mail: {{usuario.email}}</p>
     <p>{{usuario.direccion}}</p>
   </div>
   
-  <div>
+  <div class="col-lg-7 col-12  p-4 ">
     <h3>Carritos comprados:</h3>
-    
+    <hr>
     <div>
-      <ul>
-        <li *ngFor="let car of carritos" (click)="verCarrito(car.id);">
-          <span>{{car.id}}</span>
-          <span style="margin: 0 1em;">{{car.totalPagado | currency}}</span>
-          <span>{{car.fecha}}</span>
+      <ul class="list-group">
+        <li *ngFor="let car of carritos" 
+            (click)="verCarrito(car.id);"
+            class="list-group-item">
+          <p>Numero de compra: <strong>{{car.id}}</strong></p>
+          <p>Total pagado: <strong>{{car.totalPagado | currency}}</strong></p>
+          <p>Fecha realización: <strong>{{car.fecha | date}}</strong></p>
         </li>
       </ul>
 
       <div>
-        <ul>
-          <li *ngFor="let prod of productos">
+        <ul class="list-group">
+          <li *ngFor="let prod of productos" class="list-group-item">
             <img src="{{prod.imgUrl}}" alt="prod.nombre" style="max-width:75px;max-height: 75px;">
             <span>{{prod.nombre}}</span>
             <span style="margin: 0 1em;">precio pagado por unidad: {{prod.precioPagadoPorUnidad}}</span>
