--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -35,6 +35,7 @@
 
         <div class="col-md-4 col-sm-6 col-xs-12">
           <ul class="social-icons">
+            <li><a class="github" href="https://github.com/danerop/pen-tablet-app"><i class="fa fa-github"></i></a></li>
             <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
             <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
             <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
